; ModuleID = '/home/carl/AnghaBench/mpv/input/extr_input.c_mp_input_get_delay.c'
source_filename = "/home/carl/AnghaBench/mpv/input/extr_input.c_mp_input_get_delay.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_ctx = type { i32 }

@INFINITY = common dso_local global double 0.000000e+00, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local double @mp_input_get_delay(%struct.input_ctx* %0) #0 {
  %2 = alloca %struct.input_ctx*, align 8
  %3 = alloca double, align 8
  store %struct.input_ctx* %0, %struct.input_ctx** %2, align 8
  %4 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %5 = call i32 @input_lock(%struct.input_ctx* %4)
  %6 = load double, double* @INFINITY, align 8
  store double %6, double* %3, align 8
  %7 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %8 = call i32 @adjust_max_wait_time(%struct.input_ctx* %7, double* %3)
  %9 = load %struct.input_ctx*, %struct.input_ctx** %2, align 8
  %10 = call i32 @input_unlock(%struct.input_ctx* %9)
  %11 = load double, double* %3, align 8
  ret double %11
}

declare dso_local i32 @input_lock(%struct.input_ctx*) #1

declare dso_local i32 @adjust_max_wait_time(%struct.input_ctx*, double*) #1

declare dso_local i32 @input_unlock(%struct.input_ctx*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
